<resources>
    <string name="app_name">Cliente</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Titulos -->
    <string name="title_RegistrarEmpleado">Registrar Empleado</string>
    <string name="title_RegistrarDepartamento">Registrar Departamento</string>
    <string name="title_Crud">CRUD</string>

    <!-- Atributos -->
    <string name="txt_Id">ID</string>
    <string name="txt_Nombre">Nombre</string>
    <string name="txt_Telefono">Telefono</string>
    <string name="txt_Correo">Correo</string>
    <string name="txt_Direccion">Direccion</string>

    <string name="txt_IdD">ID</string>
    <string name="txt_NombreD">Nombre</string>
    <string name="txt_DescripcionD">Descripcion</string>

    <!-- Botones -->
    <string name="bto_Guardar">Guardar</string>
    <string name="bto_Regresar">Regresar</string>
    <string name="bto_Eliminar">Eliminar</string>

    <string name="bto_GuardarD">Guardar</string>
    <string name="bto_RegresarD">Regresar</string>
    <string name="bto_EliminarD">Eliminar</string>

    <string name="bto_Empleado">Empleado</string>
    <string name="bto_Departamento">Departamento</string>

    <!-- Entradas -->
    <string name="txtId">Ingresar ID</string>
    <string name="txtNombre">Ingresar Nombre</string>
    <string name="txtTelefono">Ingresar Telefono</string>
    <string name="txtCorreo">Ingresar Correo</string>
    <string name="txtDireccion">Ingresar Direccion</string>

    <string name="txtIdD">Ingresar ID</string>
    <string name="txtNombreD">Ingresar Nombre</string>
    <string name="txtDescripcionD">Ingresar Descripcion</string>

</resources>