<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmpleadoActivity">

    <TextView
        android:id="@+id/Id"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_Id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtNombre"
        android:enabled="false"
        android:inputType="text"
        android:labelFor="@id/txtId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_Nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtNombre"
        android:inputType="text"
        android:labelFor="@id/txtNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/Telefono"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_Telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtTelefono"
        android:inputType="text"
        android:labelFor="@id/txtTelefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <TextView
        android:id="@+id/Correo"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_Correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtCorreo"
        android:inputType="text"
        android:labelFor="@id/txtCorreo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/Direccion"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_Direccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtDireccion"
        android:inputType="text"
        android:labelFor="@id/txtDireccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <Button
        android:id="@+id/btoGuardar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/bto_Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/btoRegresar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/bto_Regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/btoEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bto_Eliminar"
        app:layout_constraintBottom_toTopOf="@+id/btoGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

</androidx.constraintlayout.widget.ConstraintLayout>