<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmpleadoActivity">

    <TextView
        android:id="@+id/IdD"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_IdD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/txtIdD"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtIdD"
        android:enabled="false"
        android:inputType="text"
        android:labelFor="@id/txtIdD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/NombreD"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/txt_NombreD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/txtNombreD"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtNombreD"
        android:inputType="text"
        android:labelFor="@id/txtNombreD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/DescripcionD"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:text="@string/txt_DescripcionD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <EditText
        android:id="@+id/txtDescripcionD"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:autofillHints="@string/txtDescripcionD"
        android:inputType="text"
        android:labelFor="@id/txtDescripcionD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/btoGuardarD"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/bto_GuardarD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/btoRegresarD"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/bto_RegresarD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/btoEliminarD"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/bto_EliminarD"
        app:layout_constraintBottom_toTopOf="@+id/btoGuardarD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionD" />

</androidx.constraintlayout.widget.ConstraintLayout>